--- a/app/src/main/res/layout/add_info_detail.xml
+++ b/app/src/main/res/layout/add_info_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:gravity="left"
         android:text="Info Tambahan"
         android:textColor="@android:color/white"
@@ -33,7 +33,6 @@
         android:id="@+id/addInfo_cons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addInfo_textView">
@@ -43,6 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="Kamera"
             android:textColor="@android:color/darker_gray"
@@ -56,6 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:singleLine="true"
@@ -70,6 +71,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             android:background="#202020"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -93,6 +95,7 @@
             android:id="@+id/lensa_textView"
             android:layout_width="0dp"
             android:layout_height="17dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:singleLine="true"
@@ -107,6 +110,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             android:background="#202020"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/lensa_textView"
@@ -129,6 +133,7 @@
             android:id="@+id/lokasi_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:singleLine="true"
@@ -143,6 +148,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
             android:background="#202020"
             app:layout_constraintBottom_toBottomOf="parent"
