--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -51,7 +51,7 @@
             app:layout_constraintTop_toTopOf="@+id/view"/>
 
     <EditText
-            android:id="@+id/username_textView"
+            android:id="@+id/name_textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -83,7 +83,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="32dp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/username_textView"/>
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/name_textView"/>
 
     <EditText
             android:id="@+id/about_textView"
